<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/list_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp"
    app:cardCornerRadius="8dp"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_course"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            tools:src="@color/baseColor"
            android:src="@color/baseColor"/>

        <TextView
            android:id="@+id/tv_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_course"
            tools:text="@string/desc_placeholder"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/tv_course_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_course_name"
            android:layout_toEndOf="@id/img_course"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            tools:text="@string/level_placeholder" />

        <LinearLayout
            android:id="@+id/rate_layout"
            android:layout_below="@id/tv_course_level"
            android:layout_toEndOf="@id/img_course"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/rate_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_rate"/>

            <TextView
                android:id="@+id/tv_course_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/rate_placeholder"
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_course_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_course"
            android:layout_below="@id/rate_layout"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textColor="@color/baseColor"
            tools:text="@string/price_placeholder" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>